Fixed incorrect icon spacing on new post page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,6 +257,10 @@ nav .user-profile-pic{
    
 }
 
+.likes-comments .new-post-icon{
+    margin-left: 0;
+}
+
 .like-comments a{
     all: unset;
     display: flex;
